--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ DATABASE_URL_SYNC=postgresql://mike%40polytron.co.id:Polytron132@10.8.15.53:5432
 # Storage
 STORAGE_PATH=./storage
 UPLOAD_MAX_SIZE=52428800  # 50MB
-ALLOWED_UPLOAD_EXTENSIONS=.pdf
-ALLOWED_IMAGE_EXTENSIONS=.jpg,.jpeg,.png,.gif,.webp
+ALLOWED_UPLOAD_EXTENSIONS=[".pdf"]
+ALLOWED_IMAGE_EXTENSIONS=[".jpg", ".jpeg", ".png", ".gif", ".webp"]
 
 # Session Configuration
 SESSION_EXPIRY_HOURS=24
