--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
 # Application
 APP_NAME="PDF Editor Service"
-APP_VERSION="1.0.0"
+APP_VERSION=1.0.0
 DEBUG=True
 HOST=0.0.0.0
 PORT=8000
+
+# Docker build and image
+BACKEND_IMAGE_NAME=pdf-editor-backend
+WORKDIR_PATH=/app
 
 # API Authentication (for Teedy service-to-service auth)
 API_SECRET_KEY=ANpJbVcp8H
@@ -11,10 +15,9 @@ API_SECRET_KEY=ANpJbVcp8H
 # Session Token Secret (for JWT generation)
 SESSION_SECRET_KEY=i7O58oXhFU
 
-# Database
-DATABASE_URL=postgresql+asyncpg://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/Teedy-Nextcloud-DB?sslmode=prefer
-# For sync operations (Alembic migrations)
-DATABASE_URL_SYNC=postgresql://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/Teedy-Nextcloud-DB?sslmode=prefer
+# Database (remote)
+DATABASE_URL=postgresql+asyncpg://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB?sslmode=prefer
+DATABASE_URL_SYNC=postgresql://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB?sslmode=prefer
 
 # Storage
 STORAGE_PATH=./storage
