fix: minor ssh error

--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ API_SECRET_KEY=ANpJbVcp8H
 SESSION_SECRET_KEY=i7O58oXhFU
 
 # Database (remote)
-DATABASE_URL=postgresql+asyncpg://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB?sslmode=prefer
-DATABASE_URL_SYNC=postgresql://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB?sslmode=prefer
+DATABASE_URL=postgresql+asyncpg://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB
+DATABASE_URL_SYNC=postgresql://mike%40polytron.co.id:Polytron132@10.8.15.53:5432/PDF-Editor-DB
 
 # Storage
 STORAGE_PATH=./storage
