feat: get direct session info, editor url, storage cleanup

--- a/.env
+++ b/.env
@@ -31,7 +31,13 @@ SESSION_CLEANUP_INTERVAL_MINUTES=60
 
 # CORS (for frontend)
 CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
+FRONTEND_URL=http://localhost:5173
 
 # Webhook Configuration
 WEBHOOK_TIMEOUT_SECONDS=30
 WEBHOOK_RETRY_ATTEMPTS=3
+
+# Storage cleanup settings
+CLEANUP_GRACE_PERIOD_HOURS=1
+CLEANUP_KEEP_EDITED_HOURS=24
+CLEANUP_ENABLED=True
