--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 aiofiles==23.2.1
 python-dateutil==2.8.2
+apscheduler==3.10.4
 
 # HTTP client (for webhooks)
 httpx==0.25.2
