--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_VERSION=1.0.0
 DEBUG=True
 HOST=0.0.0.0
 PORT=8000
+BACKEND_URL=https://1l7tw9hh-8000.asse.devtunnels.ms
+# BACKEND_URL=http://localhost:8000
 
 # Docker build and image
 BACKEND_IMAGE_NAME=pdf-editor-backend
@@ -30,8 +32,8 @@ SESSION_EXPIRY_HOURS=24
 SESSION_CLEANUP_INTERVAL_MINUTES=60
 
 # CORS (for frontend)
-CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
-FRONTEND_URL=http://localhost:5173
+CORS_ORIGINS=["http://localhost:5173","http://localhost:3000", "https://1l7tw9hh-5173.asse.devtunnels.ms"]
+FRONTEND_URL=https://1l7tw9hh-5173.asse.devtunnels.ms
 
 # Webhook Configuration
 WEBHOOK_TIMEOUT_SECONDS=30
