--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  backend:
+  pdf-editor-backend:
     container_name: ${BACKEND_IMAGE_NAME}
     build:
       context: .
